# OpenMAMA-nng

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
config/: mama.properties
src/: CMakeLists.txt  bridge.c  msg.c  msg.h  nng.h  nngbridgefunctions.h  publisher.c  subscription.c  subscription.h  transport.c  transport.h
